<resources>
    <string name="app_name">Chat\'in</string>
    <string name="welcome">Welcome,</string>
    <string name="lets_chat_in">Lets Chat\'in!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message</string>
    <string name="tony_strak">Tony Strak</string>
    <string name="is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="contact">Contact</string>
    <string name="active">active.</string>
    <string name="setting">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_setting">Account Setting</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="how_are_you_doing_this_is_a_long_message_that_should_probably_wrap">How are you doing? This is a long message that should probably wrap.</string>
    <string name="enter_contact_id">enter contact id</string>
    <string name="display_name">Display Name</string>
    <string name="status">Status</string>
    <string name="id_account">Id Account</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="save">Save Change</string>
    <string name="blank">not yet filled</string>
    <string name="add_your_username">Add Your Username</string>
    <string name="please_add_your_username_so_your_friends_can_find_out_who_you_are">please add your username so your friends can find out who you are</string>
    <string name="add_your_username_here">Add your username here</string>
    <string name="submit">Submit</string>
    <string name="add_your_status_so_your_friends_can_know_what_are_you_doing_now">add your status so your friends can know what are you doing now</string>
    <string name="are_you_busy">Are you busy?</string>
    <string name="let_your_friends_see_your_beauty_face_by_add_your_picture">let your friends see your beauty face by add your picture</string>
    <string name="how_my_friend_can_add_my_contact">How my friend can add my contact?</string>
    <string name="go_add_your_account_id_please">GO ADD YOUR ACCOUNT ID!!, please?</string>
    <string name="where_is_your_face">Where is your face?</string>
    <string name="welcome_to_chat_in">Welcome to Chat\'in</string>
    <string name="verification_your_account_in_your_account_email">Verification your account in your account email</string>
    <string name="send_verification">Send verification</string>
    <string name="enter_your_account_id">enter your account id</string>
    <string name="enter_your_username">enter your username</string>
    <string name="enter_your_status">enter your status</string>
    <string name="add_contact">Add</string>
</resources>
